Добавляет header для всех разрешений и вариантов

--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -18,12 +18,12 @@
 
   @include media(md) {
     max-width: $md-max;
-    padding-right: $padding--md;
-    padding-left: $padding--md;
   }
 
   @include media(lg) {
     max-width: $lg;
+    padding-right: $padding--lg;
+    padding-left: $padding--lg;
   }
 }
 
