--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -2,19 +2,13 @@
 $black1: #333333;
 $white1: #ffffff;
 $gray1: #F0EBFF;
+$gray2: #E5E6E8;
+$gray3: #BDBDBD;
 $purple1: #7859CF;
-$gray2: #f1f1f1;
-$gray3: #e5e5e5;
-$gray4: #c6c6c6;
-$gray5: rgba(0, 1, 1, 0.25);
-$green1: #63D1BB;
-$green2: #46C1AE;
-$green3: #56C3B2;
-$green4: #149080;
-$green5: #62D1BA;
-$black2: #444444;
-$red: #ff0000;
-$base-shadow: 0px 4px 20px rgba(0, 0, 0, 0.07);
+$purple2: #9070EC;
+$purple3: #593CAC;
+$pink1: #F3EBE1;
+$blue1: #EAE6FC;
 
 // Fonts
 $main-font: "Montserrat", "Arial", sans-serif;
