--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,6 +4,8 @@ $white1: #ffffff;
 $gray1: #F0EBFF;
 $gray2: #E5E6E8;
 $gray3: #BDBDBD;
+$gray4: #F8F8F8;
+$gray5: #e2e2e2;
 $purple1: #7859CF;
 $purple2: #9070EC;
 $purple3: #593CAC;
