--- a/source/sass/elements/button.scss
+++ b/source/sass/elements/button.scss
@@ -1,6 +1,7 @@
 .button {
   @include btnres;
   text-decoration: none;
+  padding: 4px;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
@@ -11,6 +12,15 @@
   color: $white1;
   border-radius: 4px;
   transition: all $default-transition-settings;
+
+  &[type="reset"] {
+    background-color: $white1;
+    color: $purple1;
+
+    &:hover {
+      color: $white1;
+    }
+  }
 
   &:hover {
     background-color: $purple2;
@@ -27,5 +37,10 @@
   &--disabled {
     background-color: $gray3;
     pointer-events: none;
+
+    &[type="reset"] {
+      background-color: $gray5;
+      color: $white1;
+    }
   }
 }
