--- a/source/sass/elements/button.scss
+++ b/source/sass/elements/button.scss
@@ -1,7 +1,7 @@
 .button {
   @include btnres;
   text-decoration: none;
-  padding: 4px;
+  padding: 2px;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
@@ -18,6 +18,10 @@
     color: $purple1;
 
     &:hover {
+      color: $white1;
+    }
+
+    &:focus-visible {
       color: $white1;
     }
   }
