Добавляет блок c карточками

--- a/source/sass/elements/button.scss
+++ b/source/sass/elements/button.scss
@@ -38,7 +38,8 @@
     background-color: $purple2;
   }
 
-  &--disabled {
+  &--disabled,
+  &[disabled] {
     background-color: $gray3;
     pointer-events: none;
 
