--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -53,9 +53,13 @@
   margin-bottom: 16px;
 
   @include media(md) {
-    margin-bottom: 26px;
+    margin-bottom: 23px;
     margin-left: auto;
-    width: 290px;
+    gap: 10px;
+    width: 310px;
+  }
+
+  @include media(lg) {
   }
 
   strong {
@@ -77,7 +81,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 4px 10px;
+    padding: 4px 8px;
     height: 32px;
     border-radius: 4px;
     transition: background-color $default-transition-settings;
@@ -169,5 +173,22 @@
 }
 
 .catalog__list {
+  @include listres;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 
+  @include media(md) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  @include media(lg) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.catalog__card {
 }
