--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 //Libs
 @import "libs/nouislider";
 @import "libs/custom-select";
+@import "libs/leaflet";
 
 // Elements
 @import "elements/button";
@@ -27,4 +28,5 @@
 @import "blocks/filter";
 @import "blocks/card";
 @import "blocks/pagination";
+@import "blocks/map";
 @import "blocks/footer";
